# stogger

./: .agent-phase  .agent-run-status.json  .agent.md  .coverage  .doit.db  .envrc  .gitignore  .hgtags  .pre-commit-config.yaml  .pre-commit-config.yaml.bak  .vulture_whitelist.py  AGENTS-TODO.md  AGENTS.md  AI-CODING-RULES.md  BREAKING_CHANGES.md  COMMAND_RESTRUCTURE_PLAN.md  CONVENTIONS.md  LICENSE  NIX.md  README.md  STOGGER_TECH_DEBT.md  TEMPLATE_TODO-AGENT.md  TODO.md  _TODO-AGENT.md  _TODO_AGENT.md  build_docs.py  conftest.py  coverage.json  docs-validation-report.md  dodo.py  flake.nix  inspection_report.md  klaus  logrambo_result.yaml  pyproject.toml  syntax_check.py  test_integration.py  test_transform.py.backup  tmp_rovodev_cli_structure_analysis.md  tmp_rovodev_coverage_analysis.md  (+9 more)
.agents/drafts/: format-config-extension.md  pytest-stogger-new-checks.md  stogger-systemd.md
.agents/impl_spec/: logdir_env_config.md
.agents/impl_specs/: body-skip-underscore-keys.md  embedded-docs.md  fix-annotation-breakage.md  fix-bootstrap-debug-leak.md  fix-doc-discovery-isolation.md  fix-early-logging-flag-on-preconfigured.md  fix-pre-bootstrap-stdout-leak.md  format-config-extension.md  legacy-elimination.md  logging-decorators-docs.md  logging-decorators.md  mod-dependencies.md  postgres-target.md  pytest-stogger-new-checks.md  raw-output.md  resolve-stogger-tech-debt.md  stogger-self-logging.md  stogger-systemd.md  tidy-logging.md  tidy-mocks.md
.agents/reports/: investigator_result.yaml  quality-audit.md
.agents/skills/: stogger-logging.md
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa
.direnv/flake-inputs/: mlfdnclq395dc8nck8m8l3wh81mvbsng-source  rm7y3132v365wh2n9jc23yp8a7fp5sxj-source
docs/: .gitignore  Makefile  README.md  __init__.py  advanced_assistant.md  best_practices.md  conf.py  development_lessons_dogfooding_check.md  index.md  index.rst  log_statement_issues.md  requirements.txt
docs/_data/: coverage.json
docs/agents/: migration_guide.md  migration_templates.md
docs/api/: index.rst
docs/api_guides/: advanced_assistant.md  assistant.md  cli.md  cli_output_transformer.md  config.md  core.md  eliot_integration.md  factory.md  gitignore_utils.md  i18n.md  i18n_check.md  interactive_transformer.md  journal_viewer.md  linter.md  live_editor.md  log_reviewer.md  log_statement_analyzer.md  pii_scrubber.md  project_analyzer.md  systemd_integration.md  web_dashboard.md
docs/assets/: nicestlog_logo_ascii.txt
docs/dev/: doc_testing_research.md  index.md  testing_guide.md  type_checking_guide.md
docs/development/: analysis_summary.md  api_reference.rst  cleanup_plan.md  command_restructure_plan.md  index.md  test_improvements_summary.md  todo.md  try_except_analysis.md  type_checking_guide.md
docs/features/: advanced_assistant.md  i18n.md  index.md  integrations.md  log_analysis.md
docs/pages/: COPIER_MIGRATION.md  PRECOMMIT_MIGRATION.md  README_TINYLLAMA_TESTS.md  RENOVATE.md  TODO.md  progress_update.md
docs/specs/: logging_rules_spec.md  workspace-split.md
docs/user/: cheatsheet.md  cli_reference.md  file_rotation.md  getting_started.md  index.md  logging_patterns.md  migration_examples.md  nix_integration.md  output_gallery.md  postgres.md  reference.md  systemd.md  testing.md
docs/user_guide/: advanced_features.md  best_practices.md  cli_migration_guide.md  cli_reference.md  getting_started.md  index.md  logging_conventions.md  logging_patterns.md  migration_examples.md  nix_integration.md  nix_setup.md  project_integration.md  quick_practices.md  systemd.md
examples/: __init__.py  advanced_assistant_demo.py  agent_migration_demo.py  basic_usage.py  eliot_demo.py  exploring_stogger.py  interactive_demo.py  journal_viewer_demo.py  live_editing_demo.py  migration_examples.py  pii_demo.py  short_syntax_demo.py  simple_format_demo.py  systemd_demo.py
examples/demo/: pyproject.toml
examples/demo/src/demo/: __init__.py  __main__.py
examples/demo/src/demo/cli/: commands.py
examples/demo/src/demo/service/: orders.py
examples/demo/tests/: test_conventions.py  test_coverage.py
scripts/: analyze_coverage.py  build_docs_for_package.py  extract_logs.py  release.py
src/nicestlog/: __init__.py  __main__.py  _regexes.py  advanced_assistant.py  assistant.py  cli.py  cli_advanced.py  cli_old.py  cli_output_transformer.py  config.py  core.py  eliot_integration.py  factory.py  gitignore_utils.py  i18n.py  i18n_check.py  interactive_transformer.py  journal_viewer.py  linter.py  live_editor.py  log_reviewer.py  log_statement_analyzer.py  pii_scrubber.py  project_analyzer.py  systemd_integration.py  web_dashboard.py
src/stogger/: __init__.py  _colors.py  _decorators.py  _types.py  config.py  core.py  decorators.py  factory.py  processors.py  rotation.py  systemd.py
stubs/stogger_systemd/: __init__.pyi
tests/: __init__.py  conftest.py  test_advanced_assistant.py  test_architecture.py  test_assistant.py  test_async.py  test_basic.py  test_body_skip_underscore_keys.py  test_build_docs_concurrency.py  test_cli.py  test_cli_ast_integration.py  test_cli_demos.py  test_cli_i18n_check.py  test_cli_i18n_check_fail_on_extra.py  test_cli_i18n_config.py  test_cli_integration.py  test_cli_more_demos.py  test_cli_output_transformer.py  test_cli_pexpect.py  test_config.py  test_config_src_dir.py  test_core.py  test_decorators.py  test_doc_discovery.py  test_docs_command_e2e.py  test_docs_e2e.py  test_docs_serve.py  test_e2e_pipelines.py  test_e2e_single_module_app.py  test_e2e_user_perspective.py  test_early_logging_init.py  test_eliot_integration.py  test_exception_logging.py  test_factory.py  test_i18n_check.py  test_i18n_simple.py  test_integration.py  test_interactive_pexpect.py  test_interactive_transformer.py  test_journal_viewer.py  (+17 more)
tests/experiments/: .EXP01_CHOICE  .EXP02_CHOICE  .EXP03_CHOICE  test_exp01_exception_traceback.py  test_exp02_render_output_sections.py  test_exp03_event_ordering.py  test_exp03_failure_demo.py
tests/impl_spec/: test_embedded_docs.py  (+8 more)
translations/: at.toml  ch.toml  en.toml  wollgesisch.toml
(+81 files in other folders)
