[project]
name = "nicestlog"
version = "0.3.5"
description = "A sophisticated multi-target structured logging system built on structlog"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [ "structlog>=25.4.0",]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[dependency-groups]
lint = [
    "ruff>=0.15.0",
    "ty>=0.0.24",
    "vulture>=2.16",
]
test = [
    "pytest>=9.0.0",
    "pytest-cov>=6.0.0",
    "pytest-timeout>=2.4.0",
    "pexpect>=4.9.0",
]
docs = [
    "sphinx>=7.0.0",
    "furo>=2024.1.29",
    "myst-parser>=2.0.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-design>=0.5.0",
    "sphinxext-opengraph>=0.9.0",
    "sphinx-notfound-page>=1.0.0",
    "linkify-it-py>=2.0.3",
]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
    {include-group = "docs"},
    "build>=1.4.2",
    "doit>=0.37.0",
    "hatch>=1.16.5",
    "mdformat>=0.7.22",
    "nicestlog[cli]",
    "pre-commit>=3.5.0",
    "radon>=6.0.1",
    "tomli-w>=1.0.0",
    "validate-pyproject>=0.24.1",
    "tox>=4.50.0",
    "tox-uv-bare>=1.33.1",
]
ipython = ["ipython>=9.4.0"]
cli = [
    "typer>=0.16.1",
]

[project.optional-dependencies]
cli = [ "typer>=0.16.1", "rich>=14.3.3", "click>=8.1.8", "colorama>=0.4.6", "toml>=0.10.2",]
web = [ "flask>=3.1.3",]
http = [ "requests>=2.33.0",]
eliot = [ "eliot>=1.17.5",]

[project.scripts]
nicestlog = "nicestlog:main"

[tool.nicestlog]
verbose = false
syslog_identifier = "test-app"
log_format = "json"
async_logging = false
enable_structured_logging = true
structured_format = "n"
enable_performance_monitoring = true


[tool.ruff]
line-length = 120
target-version = "py313"
extend-exclude = [ "tests", "examples", "docs",]



[tool.vulture]
exclude = [ ".venv/", "build/", "dist/", "tests/",]
min_confidence = 80
sort_by_size = true

[tool.ty.src]
exclude = ["tests", "examples", "docs"]

[tool.radon]
exclude = "tests/*,build/*,dist/*,.venv/*"
total_average = true

[tool.pytest.ini_options]
testpaths = [ "tests",]
python_files = [ "test_*.py", "*_test.py",]
python_classes = [ "Test*",]
python_functions = [ "test_*",]
addopts = [ "--tb=short", "--strict-markers", "--strict-config", "--disable-warnings",]
markers = [ "slow: marks tests as slow (deselect with '-m \"not slow\"')", "integration: marks tests as integration tests",]
filterwarnings = [ "error", "ignore::UserWarning", "ignore::DeprecationWarning",]

[tool.ruff.lint]
select = [ "E", "W", "F", "I", "N", "D", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RUF", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "TD", "FIX", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG",]
ignore = [ "D100", "D104", "D203", "D213", "COM812", "A002", "ARG001", "D101", "D102", "D103", "D105", "D107", "D205", "D400", "D401", "D417", "E402", "FBT001", "FBT002", "FBT003", "LOG015", "N806", "PLC0415", "PLR0911", "PLR0912", "PLR0913", "PLR0915", "PLR2004", "PLW0603", "PLW2901", "SIM115", "SLF001", "TRY300", "BLE001", "S603", "S607",]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.coverage.run]
source = [ "src",]
branch = true
omit = [ "tests/*", ".venv/*",]

[tool.coverage.report]
exclude_lines = [ "pragma: no cover", "def __repr__", "if self.debug:", "if settings.DEBUG", "raise AssertionError", "raise NotImplementedError", "if 0:", "if __name__ == .__main__.:", "class .*\\bProtocol\\):", "@(abc\\.)?abstractmethod",]
show_missing = true
skip_covered = false
precision = 2

[tool.uv.sources.nicestlog]
workspace = true


[tool.hatch.build.targets.wheel]
packages = [ "src/nicestlog",]

[tool.hatch.build.targets.sdist]
include = [ "README.md", "docs/**",]

[tool.hatch.build.targets.wheel.force-include]
"README.md" = "nicestlog/_docs/README.md"
docs = "nicestlog/_docs"

[tool.tox]
env_list = ["fix", "cov", "3.13"]
skip_missing_interpreters = true

[tool.tox.env_run_base]
package = "wheel"
runner = "uv-venv-lock-runner"
dependency_groups = ["test"]
depends = ["fix"]
commands = [["pytest", { replace = "posargs", extend = true }]]

[tool.tox.env.fix]
skip_install = true
depends = []
description = "Format, lint, fix whitespace, type-check, dead code"
allowlist_external = ["ruff", "ty"]
dependency_groups = ["test", "lint"]
commands = [
    ["ruff", "check", "--fix"],
    ["ty", "check"],
    ["vulture", "src/", "tests/", "--min-confidence=80"],
    ["ruff", "format"],
]

[tool.tox.env.cov]
base_python = ["3.13"]
package = "wheel"
runner = "uv-venv-lock-runner"
dependency_groups = ["test"]
depends = ["fix"]
description = "Tests with coverage"
commands = [
    ["pytest", "--cov=nicestlog", "--cov-report=term-missing", "--cov-report=html"],
]
