[build-system]
requires = ["hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "stogger"
dynamic = ["version"]
requires-python = ">=3.13"
dependencies = [
    "attrs>=24.3.0",
    "colorama>=0.4.6",
    "structlog>=25.4.0",
]

[tool.hatch.version]
source = "vcs"
tag-pattern = "^(?P<version>\\d{4}\\.\\d{1,2}\\.\\d{1,2})$"
fallback-version = "0.0.0"
raw-options.root = "."

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[dependency-groups]
lint = [
    "ruff>=0.15.0",
    "ty>=0.0.24",
    "vulture>=2.16",
]
test = [
    "pytest>=9.0.0",
    "pytest-cov>=6.0.0",
    "pytest-timeout>=2.4.0",
    "complexipy>=0.1.0",
    "pytest-stogger",
]
docs = [
    "sphinx>=7.0.0",
    "furo>=2024.1.29",
    "myst-parser>=2.0.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-design>=0.5.0",
    "sphinxext-opengraph>=0.9.0",
    "sphinx-notfound-page>=1.0.0",
    "linkify-it-py>=2.0.3",
    "sphinx-autoapi>=3.8.0",
    "sphinx-autodoc-typehints>=3.5.2",
    "sphinx-llms-txt>=0.7.1",
    "sphinx-togglebutton>=0.4.5",
    "roman-numerals>=4.1.0",
]
dev = [
    "pytest-ruff>=0.5",
    "pytest-ty>=0.2.1",
]

[tool.ruff]
line-length = 120
target-version = "py313"
extend-exclude = [ "tests", "docs", "examples",]

[tool.vulture]
exclude = [ ".venv/", "build/", "dist/", "tests/",]
min_confidence = 80
sort_by_size = true

[tool.ty.src]
exclude = ["tests", "docs"]

[tool.pytest.ini_options]
testpaths = [ "tests",]
python_files = [ "test_*.py", "*_test.py",]
python_classes = [ "Test*",]
python_functions = [ "test_*",]
addopts = [ "--tb=short", "--strict-markers", "--strict-config", "--disable-warnings",]
filterwarnings = [ "error", "ignore::UserWarning", "ignore::DeprecationWarning",]

[tool.pytest-stogger]
source = "src/stogger"
test_dir = "tests"
exclude = []
info_allowed_layers = []
exempt_event_ids = [
    "config-loading-failed",
    "file-logging-setup-failed",
    "heuristic-detection-failed",
    "logging-cmd-output",
    "logging-cmd-output-file-not-found",
    "logging-cmd-output-no-logdir",
    "no-logging-handlers-configured",
    "project-structure-detected-from-heuristics",
    "project-structure-detected-from-pyproject",
    "translation-load-failed",
]

[tool.pytest-stogger.per-file-ignores]
"core.py" = ["except-must-log", "complexity-needs-log"]
"_colors.py" = ["except-must-log", "complexity-needs-log"]

[tool.ruff.lint]
select = [ "E", "W", "F", "I", "N", "D", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RUF", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "TD", "FIX", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG",]
ignore = [ "D100", "D104", "D203", "D213", "COM812", "D101", "D102", "D103", "D105", "D107", "D205", "D400", "D401", "D417", "E402", "FBT001", "FBT002", "FBT003", "N806", "PLW0603", "PLW2901", "TRY300",]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.coverage.run]
source = [ "src",]
branch = true
omit = [ "tests/*", ".venv/*",]

[tool.coverage.report]
exclude_lines = [ "pragma: no cover", "def __repr__", "if self.debug:", "if settings.DEBUG", "raise AssertionError", "raise NotImplementedError", "if 0:", "if __name__ == .__main__.:", "class .*\\bProtocol\\):", "@(abc\\.)?abstractmethod",]
show_missing = true
skip_covered = false
precision = 2

[tool.tox]
env_list = ["fix", "cov", "docs", "build", "3.13"]
skip_missing_interpreters = true

[tool.tox.env_run_base]
package = "editable"
runner = "uv-venv-lock-runner"
dependency_groups = ["test"]
depends = ["fix"]
commands = [["pytest", { replace = "posargs", extend = true }]]

[tool.tox.env.fix]
skip_install = true
depends = []
description = "Format, lint, fix whitespace, type-check, dead code"
allowlist_externals = ["ruff", "ty"]
dependency_groups = ["test", "lint"]
commands = [
    ["ruff", "check", "--fix"],
    ["ty", "check"],
    ["vulture", "src/", "tests/", "--min-confidence=80"],
    ["ruff", "format"],
]

[tool.tox.env.cov]
base_python = ["3.13"]
package = "editable"
runner = "uv-venv-lock-runner"
dependency_groups = ["test"]
depends = ["fix"]
description = "Tests with coverage"
commands = [
    ["pytest", "--cov=stogger", "--cov-report=term-missing", "--cov-report=html"],
]

[tool.tox.env.docs]
skip_install = false
package = "editable"
runner = "uv-venv-lock-runner"
depends = ["fix"]
description = "Build Sphinx HTML documentation"
dependency_groups = ["test", "docs"]
allowlist_externals = ["rm"]
commands_pre = [
    ["rm", "-rf", "docs/autoapi", "docs/_build"],
]
commands = [
    ["sphinx-build", "-b", "html", "docs", "docs/_build/html"],
]

[tool.tox.env.build]
skip_install = true
depends = ["docs"]
description = "Build package with embedded documentation"
dependency_groups = ["docs"]
commands = [
    ["uv", "build", { replace = "posargs", extend = true }],
]

[tool.uv.sources]
pytest-stogger = { git = "https://github.com/dpausp/pytest-stogger" }
stogger-systemd = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]
