[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[project]
name = "stogger"
dynamic = ["version"]
requires-python = ">=3.13"
dependencies = [
    "attrs>=24.3.0",
    "colorama>=0.4.6",
    "structlog>=25.4.0",
]

[project.optional-dependencies]
postgres = ["stogger-postgres"]

[tool.hatch.version]
source = "versioningit"
default-version = "2026.5.15"

[tool.hatch.version.format]
distance = "{base_version}.dev{distance}+{vcs}{rev}.d{build_date:%Y%m%d}"
dirty = "{base_version}+d{build_date:%Y%m%d}"
distance-dirty = "{base_version}.dev{distance}+{vcs}{rev}.d{build_date:%Y%m%d}"


[tool.hatch.build.targets.wheel]
artifacts = ["src/stogger/_docs/"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[dependency-groups]
lint = [
    "ruff>=0.15.0",
    "ty>=0.0.24",
    "vulture>=2.16",
]
test = [
    "pytest>=9.0.0",
    "pytest-cov>=6.0.0",
    "pytest-patterns",
    "pytest-timeout>=2.4.0",
    "complexipy>=5.5.0,<5.6.0",
    "pytest-archon>=0.0.7",
    "pytest-structlog>=1.2",
    "stogger-postgres",
    "pytest-stogger",
]
docs = [
    "sphinx>=7.0.0",
    "furo>=2024.1.29",
    "myst-parser>=2.0.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-design>=0.5.0",
    "sphinxext-opengraph>=0.9.0",
    "sphinx-notfound-page>=1.0.0",
    "linkify-it-py>=2.0.3",
    "sphinx-autoapi>=3.8.0",
    "sphinx-autodoc-typehints>=3.5.2",
    "sphinx-llms-txt>=0.7.1",
    "sphinx-togglebutton>=0.4.5",
    "roman-numerals>=4.1.0",
    "erbsland-sphinx-ansi>=1.2.2",
]
dev = [
    "pytest-ruff>=0.5",
    "pytest-ty>=0.2.1",
]

[tool.ruff]
line-length = 120
target-version = "py313"
extend-exclude = [ "docs", "examples", "scripts",]

[tool.vulture]
exclude = [ ".venv/", "build/", "dist/", "tests/",]
min_confidence = 80
sort_by_size = true

[tool.ty.src]
exclude = ["docs"]

[tool.pyright]
exclude = ["tests", "docs"]

[tool.pytest.ini_options]
testpaths = [ "tests",]
python_files = [ "test_*.py", "*_test.py",]
python_classes = [ "Test*",]
python_functions = [ "test_*",]
addopts = [ "--tb=short", "--strict-markers", "--strict-config", "--structlog-settings-report=never",]
markers = [
  "integration: integration tests that test real module interactions",
  "e2e: end-to-end tests that exercise full pipelines",
]

[tool.pytest-stogger]
source = "src/stogger"
test_dir = "tests"
disable_rules = ["no-early-init"]
info_allowed_layers = []
exempt_event_ids = [
    # Command-logging events: tested via structlog.configure() (no capture),
    # so assert log.has() cannot verify emission. Bare log.has() is a no-op
    # in these tests — the events ARE emitted but cannot be asserted.
    "logging-cmd-output",
    "logging-cmd-output-no-logdir",
    "cmd-output-file-open-failed",
    "logging-cmd-output-file-not-found",
    "logging-cmd-output-drop",
]

[tool.pytest-stogger.per-file-ignores]
# Low-level ANSI helpers — logging would corrupt colorized output.
"_colors.py" = ["except-must-log", "complexity-needs-log"]
# Package init — runs before logger is configured.
"__init__.py" = ["except-must-log"]
# systemd journal bridge — sends directly to journald via AF_UNIX, not stogger.
"systemd.py" = ["except-must-log", "complexity-needs-log"]
# Rotating file writer — runs inside the structlog render → print → file.write
# hot path; logging during rotation would recurse back through the pipeline.
"rotation.py" = ["complexity-needs-log"]

[tool.ruff.lint]
select = [ "E", "W", "F", "I", "N", "D", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RUF", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "TD", "FIX", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG",]
ignore = [ "D100", "D104", "D203", "D213", "COM812", "D101", "D102", "D103", "D105", "D107", "D205", "D400", "D401", "D417", "E402", "FBT001", "FBT002", "FBT003", "N806", "PLW0603", "PLW2901", "TRY300",]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",     # assert is the testing primitive
    "PLC0415",  # inline imports after mocking sys.modules
    "SLF001",   # tests access private members
    "PLR2004",  # magic values in assertions are expected values
    "TRY301",   # raise-in-try to test exception paths
    "TRY003",   # vanilla raises in test setup
    "EM101",    # raw-string-in-exception conflicts with PT012 single-statement
    "ARG001",   # pytest fixtures / @patch inject unused params
    "ARG002",   # same for methods
    "S108",     # /tmp in test-data assertions
    "S603",     # subprocess in controlled test context
    "LOG015",   # root logger in stdlib-bridge tests
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.coverage.run]
source = [ "src",]
branch = true
omit = [ "tests/*", ".venv/*",]

[tool.coverage.report]
fail_under = 100
exclude_lines = [ "pragma: no cover", "def __repr__", "if self.debug:", "if settings.DEBUG", "raise AssertionError", "raise NotImplementedError", "if 0:", "if __name__ == .__main__.:", "class .*\\bProtocol\\):", "@(abc\\.)?abstractmethod",]
show_missing = true
skip_covered = true
precision = 2

[tool.tox]
env_list = ["fix", "cov", "docs", "build", "3.13", "outsider"]
skip_missing_interpreters = true

[tool.tox.env_run_base]
package = "editable"
runner = "uv-venv-lock-runner"
dependency_groups = ["test"]
depends = ["fix"]
commands = [["pytest", { replace = "posargs", extend = true }]]

[tool.tox.env.fix]
skip_install = true
depends = []
description = "Format, lint, fix whitespace, type-check, dead code"
allowlist_externals = ["ruff", "ty"]
dependency_groups = ["test", "lint"]
commands = [
  ["ruff", "check", "--fix"],
  ["ty", "check", "src/", "tests/"],
  ["vulture", "src/", "tests/", "--min-confidence=80"],
  ["complexipy", "src/", "--quiet"],
  ["ruff", "format"],
]

[tool.tox.env.cov]
base_python = ["3.14"]
package = "editable"
runner = "uv-venv-lock-runner"
dependency_groups = ["test"]
depends = ["fix"]
description = "Tests with coverage"
commands = [
    ["pytest", "--cov=stogger", "--cov-report=term-missing", "--cov-report=html"],
]

[tool.tox.env.docs]
skip_install = false
package = "editable"
runner = "uv-venv-lock-runner"
depends = ["fix"]
description = "Build Sphinx HTML documentation"
dependency_groups = ["test", "docs"]
allowlist_externals = ["rm"]
commands_pre = [
    ["rm", "-rf", "docs/autoapi", "docs/_build"],
]
commands = [
    ["sphinx-build", "-q", "-b", "html", "docs", "docs/_build/html"],
]

[tool.tox.env.build]
skip_install = true
depends = ["docs"]
description = "Build package with embedded documentation"
dependency_groups = ["docs"]
commands = [
    ["python", "scripts/build_docs_for_package.py"],
    ["uv", "build", { replace = "posargs", extend = true }],
]

[tool.tox.env.outsider]
base_python = ["3.14"]
skip_install = true
depends = ["docs"]
dependency_groups = ["test"]
description = "Test from consumer perspective (wheel install with embedded docs)"
commands = [
    ["python", "scripts/build_docs_for_package.py"],
    ["uv", "pip", "install", "--no-deps", "."],
    ["pytest", "tests/test_doc_discovery.py", "tests/test_e2e_user_perspective.py", "-v"],
]

[tool.uv.sources]
stogger-postgres = { workspace = true }
pytest-patterns = { path = "../pytest-patterns" }
pytest-stogger = { path = "../pytest-stogger" }

[tool.uv.workspace]
members = ["packages/stogger-postgres"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
